--- a/www/core/components/settings/lang/en.json
+++ b/www/core/components/settings/lang/en.json
@@ -1,6 +1,6 @@
 {
     "about": "About",
-    "appname": "Moodle Mobile {{version}}",
+    "appname": "Elearning Mercu Buana Mobile App {{version}}",
     "appready": "App ready",
     "cacheexpirationtime": "Cache expiration time (miliseconds)",
     "cordovadevicemodel": "Cordova Device model",
